temp_files/tmp_1567274538.1.compile_error
./temp_files/tmp_1567274538.1.cpp: In function ‘void test1()’:
./temp_files/tmp_1567274538.1.cpp:14:5: error: ‘vector’ was not declared in this scope
     vector<int> input = {2, 7, 11, 15}; 
     ^
./temp_files/tmp_1567274538.1.cpp:14:5: note: suggested alternative:
In file included from /usr/include/c++/4.8.2/vector:64:0,
                 from ./temp_files/tmp_1567274538.1.cpp:3:
/usr/include/c++/4.8.2/bits/stl_vector.h:210:11: note:   ‘std::vector’
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^
./temp_files/tmp_1567274538.1.cpp:14:12: error: expected primary-expression before ‘int’
     vector<int> input = {2, 7, 11, 15}; 
            ^
./temp_files/tmp_1567274538.1.cpp:14:12: error: expected ‘;’ before ‘int’
./temp_files/tmp_1567274538.1.cpp:15:12: error: expected primary-expression before ‘int’
     vector<int> ret =  s.twoSum(input, 9);
            ^
./temp_files/tmp_1567274538.1.cpp:15:12: error: expected ‘;’ before ‘int’
./temp_files/tmp_1567274538.1.cpp:16:9: error: ‘input’ was not declared in this scope
     if (input[ret[0]] + input[ret[1]] == 9) {
         ^
./temp_files/tmp_1567274538.1.cpp:16:15: error: ‘ret’ was not declared in this scope
     if (input[ret[0]] + input[ret[1]] == 9) {
               ^
